# GentleCorp-Ecosystem

./: .editorconfig  .gitignore  AUTHORS  NOTIZEN.adoc  README.md  ROADMAP  architektur.puml  architektur2.puml  architektur3.puml  projekt-info.adoc
backend/python/inventory/: TODO  compose.yml  pyproject.toml  readMe.md  requirements.txt  tmp.txt
backend/python/inventory/.extras/csv/: inventory.csv  reserved_item.csv  reserved_products.csv
backend/python/inventory/.extras/sql/: create-db-inventory.sql  create.sql  drop.sql
backend/python/inventory/app/: http_exceptions.py  main.py
backend/python/inventory/app/clients/: __init__.py  product.py  product_client.py
backend/python/inventory/app/controller/: __init__.py  admin_controller.py  auth_controller.py  inventory_read_controller.py  inventory_write_controller.py
backend/python/inventory/app/core/: config.py  loggin.py  settings.py
backend/python/inventory/app/crud/: inventory_crud.py
backend/python/inventory/app/db/: __init__.py  mysql.py
backend/python/inventory/app/exceptions/: No_changes.py  No_changes_detected.py  __init__.py  duplicate.py  exception.py  insufficient_stock.py  invalid_argument.py  not_found.py  unauthorize.py  version_missing.py
backend/python/inventory/app/mapper/: __init__.py  inventory_mapper.py
backend/python/inventory/tests/: inventory_test.py
backend/python/product/: TODO  pyproject.toml  readMe.md  requirements.txt  tmp.txt
backend/python/product/app/: crud.py  main.py
backend/python/product/app/db/: data.py  (+2 more)
backend/python/product/tests/: test.py  test_product.py
(+676 files in other folders)
