[tool.poetry]
name = "inventory_service"
version = "0.1.0"
description = "Inventory service with FastAPI and Keycloak integration"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.95.0"
sqlalchemy = "^1.4.0"
aiomysql = "^0.0.21"
pydantic = "^1.9.1"
uvicorn = "^0.15.0"
fastapi-keycloak = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
