[tool.poetry]
name = "inventory_service"
version = "0.1.0"
description = "Inventory service with FastAPI and Keycloak integration"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
