[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "A FastAPI project with Keycloak integration"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
pydantic = "^1.11.1"
keycloak = "^0.21.0"

uvicorn = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
